--- a/index.html
+++ b/index.html
@@ -6,34 +6,46 @@
 </head>
 
 <body>
+<center>
+<div class="main">
 
-<div class="container">
+    <div class="form-card">
 
-    <h2>Patient Registration Form</h2>
+        <h2>🏥 Patient Registration</h2>
 
-    <form id="patientForm" onsubmit="return validateForm()">
+        <form onsubmit="return validateForm()">
 
-        <label>Name:</label>
-        <input type="text" id="name" placeholder="Enter patient name">
+            <div class="input-group">
+                <label>Full Name</label>
+                <input type="text" id="name" placeholder="Enter patient name">
+            </div>
 
-        <label>Age:</label>
-        <input type="number" id="age" placeholder="Enter age">
+            <div class="input-group">
+                <label>Age</label>
+                <input type="number" id="age" placeholder="Enter age">
+            </div>
 
-        <label>Contact Number:</label>
-        <input type="text" id="contact" placeholder="Enter contact number">
+            <div class="input-group">
+                <label>Contact Number</label>
+                <input type="text" id="contact" placeholder="Enter contact number">
+            </div>
 
-        <label>Email:</label>
-        <input type="text" id="email" placeholder="Enter email">
+            <div class="input-group">
+                <label>Email Address</label>
+                <input type="text" id="email" placeholder="Enter email">
+            </div>
 
-        <button type="submit">Register</button>
+            <button type="submit">Register Patient</button>
 
-        <p id="errorMsg"></p>
+            <p id="errorMsg"></p>
 
-    </form>
+        </form>
+
+    </div>
 
 </div>
 
 <script src="script.js"></script>
-
+</center>
 </body>
 </html>
